<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_ekf</name>
  <version>0.0.0</version>
  <description>IMU Bias EKF for orientation and position updates, fused with external odometry.</description>
  <maintainer email="nathanroger314@gmail.com">nathan</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-scipy</depend>
  <exec_depend>python3-filterpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
